--- a/app.css
+++ b/app.css
@@ -2,7 +2,7 @@ body{
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: black;
+    background-color: darkslategrey;
 }
 
 h1{
