restrict colors to purple

--- a/app.css
+++ b/app.css
@@ -2,7 +2,7 @@ body{
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: darkslategrey;
+    background-color: rgb(38, 2, 103);
 }
 
 h1{
